# cm-synthesis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cm-synthesis.py  requirements-dev.txt  setup.cfg
src/cmdesigner/: _main_poly.py  cm_synthesis.py  colors.py  matrix.py  poly.py  polynomial.py  polynomials.py  polysynthesis.py  utils.py
