[metadata]
name = cmdesigner
description = 'A coupling matrix synthesis tool for microwave filter design'
version = 1.0.0
author = Huseyin Nuri Gulmez
author_email = hngulmez@gmail.com
license = MIT 

[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    cmdesigner-poly = cmdesigner.polynomials:main

[mypy]
plugins = numpy.typing.mypy_plugin
ignore_missing_imports = true
disallow_incomplete_defs = true

